Inserção do texto nas fotos do modal e modificação do favicon

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ hr {
 hr:not([size]) {
   height: 0.125rem;
 }
-
+/* Modificar a fonte para algo manuscrito */
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
